--- a/au-interconnect/au-interconnect/Site.Master
+++ b/au-interconnect/au-interconnect/Site.Master
@@ -7,6 +7,12 @@
     <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
+    <meta property="og:title" content="Auburn Interconnect" />
+    <meta property="og:type" content="university" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="http://www.auburn.edu/template/styles/images/headerLogo2.png" />
+    <meta property="og:site_name" content="Auburn Interconnect" />
+    <meta property="fb:admins" content="546981070" />
 </head>
 <body>
     <form runat="server">
